# actix-rest-api

./: Cargo.toml  Dockerfile  README.md  docker-compose.yaml
src/: main.rs  models.rs  routes.rs  schema.rs
src/users/: models.rs  routes.rs
