[package]
name = "actix-rest-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.2.1"
derive_more = "0.99.17"
diesel = { version = "2.0.2", features = ["postgres", "r2d2"] }
env_logger = "0.9.1"
lazy_static = "1.4.0"
r2d2 = "0.8.10"
serde = "1.0.147"
serde_derive = "1.0.147"
serde_json = "1.0.87"
sodiumoxide = "0.2.7"
